# azure-operator

./: .gitignore  .gitleaks.toml  .golangci.yml  .trivyignore  README.md  ROADMAP.md  go.mod  go.sum  pyproject.toml  requirements-dev.lock.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt
.github/workflows/: build.yml  ci.yml  compile-bicep.yml  container.yml  security.yml
archetypes/: README.md
archetypes/5-management-only/: README.md
bicep/connectivity/: main.bicep
bicep/identity/: main.bicep
bicep/management/: main.bicep
bicep/policy/: main.bicep
bicep/security/: main.bicep
cmd/azo/: exec.go  main.go
cmd/controller/: main.go
docs/: GOLANG_MIGRATION_PLAN.md
infrastructure/: main.bicep  main.example.bicepparam  rbac.bicep
infrastructure/modules/: network.bicep  subscription-rbac.bicep
lib/policies/: README.md  definitions.json  initiatives.json  sync.sh
pkg/approval/: manager.go  manager_test.go
pkg/auth/: credential.go  credential_test.go
pkg/bootstrap/: provisioner.go  provisioner_test.go  reconciler.go
pkg/config/: config.go  config_test.go
pkg/dependency/: graph.go  graph_test.go
pkg/deploy/: executor.go  executor_test.go
pkg/diff/: normalizer.go  normalizer_test.go
pkg/graph/: client.go  client_test.go
pkg/guardrails/: checker.go  checker_test.go
pkg/ignore/: rules.go  rules_test.go
pkg/integration/: azure_test.go  doc.go
pkg/loader/: loader.go  loader_test.go
pkg/migrate/: controller.go  controller_test.go
pkg/modes/: resolver.go  resolver_test.go
pkg/pause/: manager.go  manager_test.go
pkg/provenance/: logger.go  logger_test.go
pkg/provisioner/: provisioner.go  provisioner_test.go
pkg/reconciler/: reconciler.go  reconciler_test.go
pkg/specs/: base.go  bastion.go  connectivity.go  firewall.go  management.go  management_test.go  security.go  spec.go  spec_test.go
pkg/stacks/: manager.go  manager_test.go
pkg/testutil/: client.go  context.go  credential.go  doc.go  graph.go  resources.go  testutil_test.go
pkg/validate/: validator.go  validator_test.go
pkg/whatif/: client.go  client_test.go
portal/: README.md  createUiDefinition.json  main.bicep  mainTemplate.json
portal/modules/: containerGroup.bicep  identity.bicep  logAnalytics.bicep
scenarios/: README.md
scenarios/5-management-only/: README.md
scenarios/6-single-region-hub-spoke-azfw/: README.md
src/controller/: __init__.py  approval.py  bootstrap.py  cli.py  config.py  dependency.py  deployment_stacks.py  diff_normalizer.py  guardrails.py  ignore_rules.py  main.py  models.py  pause.py  pr_gate.py  provenance.py  reconciler.py  resource_graph.py  resource_modes.py  security.py  spec_loader.py
templates/: .gitkeep  README.md
tests/: conftest.py  test_approval.py  test_bootstrap.py  test_config.py  test_dependency.py  test_deployment_stacks.py  test_diff_normalizer.py  test_guardrails.py  test_integration.py  test_models.py  test_pause.py  test_pr_gate.py  test_provenance.py  test_resource_graph.py  test_resource_modes.py  test_security.py  test_whatif_safety_scenarios.py
tests/azure_mock/: __init__.py  context.py  credential.py  graph.py  resources.py
(+30 files in other folders)
